updat some file actions